mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__move_styles_to_body.snap
---
source: mail/mail-html-transformer/src/tests/transforms.rs
expression: html.to_string()
---
<html><head>
       <title>Title</title>
       
       
       </head>
       <body>
       <span>Text in body</span>
       
       
    <style> body { color: red; }  </style><style> .a { color: black; } </style></body></html>
